--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 S3method(plot,correctedLasso)
 S3method(plot,cv.correctedLasso)
+S3method(plot,muselector)
 export(correctedLasso)
 export(cv.correctedLasso)
 export(muselector)
 import(Rglpk)
 import(dplyr)
 import(ggplot2)
+import(glmnet)
