Made a generalized Dantzig selector function and fixed some of the MU Selector bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,cv_corrected_lasso)
 S3method(plot,muselector)
 export(cv_corrected_lasso)
 export(fit_corrected_lasso)
+export(fit_gds)
 export(muselector)
 import(Rglpk)
 import(dplyr)
