--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,5 +24,6 @@ URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
