--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
   Rglpk (>= 0.6-3), 
   mvtnorm (>= 1.0-7), 
   ggplot2 (>= 2.2.1),
-  Rdpack
+  Rdpack (>= 0.5-3)
 URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
 Suggests: 
