Updated examples so they run

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,9 @@ RdMacros: Rdpack
 Suggests: 
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    flare,
+    igraph,
+    tidyverse,
+    zeallot
 VignetteBuilder: knitr
