Added C++ file fit_mu_lasso.cpp and made it run. 1 note in R CMD CHECK, which I have to investigate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,6 @@ import(Rglpk)
 import(ggplot2)
 import(glmnet)
 import(stats)
+importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
+useDynLib(hdme, .registration = TRUE)
