--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,7 @@ Imports:
   mvtnorm (>= 1.0-7), 
   ggplot2 (>= 2.2.1),
   Rdpack (>= 0.5-3),
-    Rcpp (>= 0.12.15),
-    RcppArmadillo (>= 0.8.300.1.0)
+    Rcpp (>= 0.12.15)
 URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
 Suggests:
