--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export()
 export(cv_corrected_lasso)
 export(fit_corrected_lasso)
 export(fit_gds)
+export(fit_gmu_lasso)
 export(fit_gmus)
 export(fit_mus)
 import(Rglpk)
