Added citation to Description section in DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,10 @@ Maintainer: Oystein Sorensen <oystein.sorensen.1985@gmail.com>
 Description: Penalized regression for generalized linear models for
   measurement error problems (aka. errors-in-variables). The package
   contains a version of the lasso (L1-penalization) which corrects
-  for measurement error. It also contains an implementation of the 
-  Generalized Matrix Uncertainty Selector, which is a version the
-  (Generalized) Dantzig Selector for the case of measurement error.
+  for measurement error (Sorensen et al. (2015) <doi:10.5705/ss.2013.180>). 
+  It also contains an implementation of the Generalized Matrix Uncertainty 
+  Selector, which is a version the (Generalized) Dantzig Selector for the 
+  case of measurement error (Sorensen et al. (2018) <doi:10.1080/10618600.2018.1425626>).
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
