--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hdme
 Type: Package
 Title: High-Dimensional Regression with Measurement Error
-Version: 0.1.0.9000
+Version: 0.1.1
 Encoding: UTF-8
 Author: Oystein Sorensen
 Maintainer: Oystein Sorensen <oystein.sorensen.1985@gmail.com>
@@ -29,7 +29,8 @@ Suggests:
     testthat,
     flare,
     igraph,
-    tidyverse,
+    dplyr,
+    tidyr,
     zeallot
 VignetteBuilder: knitr
 LinkingTo: Rcpp, RcppArmadillo
