--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,corrected_lasso)
 S3method(plot,cv_corrected_lasso)
+S3method(plot,gds)
 S3method(plot,gmu_lasso)
 S3method(plot,gmus)
 export(cv_corrected_lasso)
