--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hdme
 Type: Package
 Title: High-Dimensional Regression with Measurement Error
-Version: 0.1.1.9002
+Version: 0.1.1.9003
 Encoding: UTF-8
 Author: Oystein Sorensen
 Maintainer: Oystein Sorensen <oystein.sorensen.1985@gmail.com>
@@ -17,13 +17,13 @@ LazyData: TRUE
 RoxygenNote: 6.0.1
 Imports:
   glmnet (>= 2.0-13), 
-  Rglpk (>= 0.6-1), 
   ggplot2 (>= 2.2.1),
   Rdpack, 
     Rcpp (>= 0.12.15)
 URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
-Suggests:
+Suggests: Rglpk (>= 0.6-1), 
+    lpSolveAPI (>= 5.5.2.0-17),
     knitr,
     rmarkdown,
     testthat,
