--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,15 +22,15 @@ Imports:
     Rcpp (>= 0.12.15)
 URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
-Suggests: Rglpk (>= 0.6-1), 
+Suggests: 
+    Rglpk (>= 0.6-1),
     lpSolveAPI (>= 5.5.2.0-17),
     knitr,
     rmarkdown,
     testthat,
     flare,
-    igraph,
     dplyr,
     tidyr,
-    zeallot
+    covr
 VignetteBuilder: knitr
 LinkingTo: Rcpp, RcppArmadillo
