--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,13 @@ Imports:
   glmnet (>= 2.0-13), 
   ggplot2 (>= 2.2.1),
   Rdpack, 
-  Rglpk (>= 0.6-1),
-    Rcpp (>= 0.12.15)
+  Rcpp (>= 0.12.15)
 URL: https://github.com/osorensen/hdme
 RdMacros: Rdpack
 Suggests: 
     knitr,
+    Rglpk (>= 0.6-1),
+    lpSolveAPI (>= 5.5.2),
     rmarkdown,
     testthat,
     flare,
