--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,12 @@ S3method(plot,cv_corrected_lasso)
 S3method(plot,gds)
 S3method(plot,gmu_lasso)
 S3method(plot,gmus)
+export(corrected_lasso)
 export(cv_corrected_lasso)
-export(fit_corrected_lasso)
-export(fit_gds)
-export(fit_gmu_lasso)
-export(fit_gmus)
-export(fit_mus)
+export(gds)
+export(gmu_lasso)
+export(gmus)
+export(mus)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
 useDynLib(hdme, .registration = TRUE)
