Finished first iteration of adding S3 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(coef,corrected_lasso)
 S3method(coef,gds)
+S3method(coef,gmu_lasso)
+S3method(coef,gmus)
 S3method(plot,corrected_lasso)
 S3method(plot,cv_corrected_lasso)
 S3method(plot,gds)
@@ -10,6 +12,8 @@ S3method(plot,gmus)
 S3method(print,corrected_lasso)
 S3method(print,cv_corrected_lasso)
 S3method(print,gds)
+S3method(print,gmu_lasso)
+S3method(print,gmus)
 export(corrected_lasso)
 export(cv_corrected_lasso)
 export(gds)
